ffmpeg: Do not copy the display matrix if rotation meta-data is manually added

Fixes Ticket4560

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>